--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get money</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <div class="press">Click here</div>
+        <div class="container--fluid">
+            <div class="background">
+                <div class="cube"></div>
+                <div class="cube"></div>
+                <div class="cube"></div>
+                <div class="cube"></div>
+                <div class="cube"></div>
+                <div class="cube"></div>
+            </div>
+        </div>
+        <audio controls autoplay class="player">
+            <source src="./audio/Leningrad_Menedzher.mp3">
+        </audio>
+        <div class="container__btn">
+            <a class="link--random" href="#" target="_blank">
+                <button class="press">
+                    <span class="span1">make money</span><span class="span2">click here</span>
+                </button>
+            </a>
+        </div>
+        
     </div>
+    <script src="/index.js"></script>
 </body>
 </html>
