feat: add github link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="cube"></div>
             </div>
         </div>
-        <audio controls autoplay class="player">
+        <audio controls autoplay class="player" >
             <source src="./audio/Leningrad_Menedzher.mp3">
         </audio>
         <div class="container__btn">
@@ -30,8 +30,8 @@
                 </button>
             </a>
         </div>
-        
+        <a class="github__link" href="https://github.com/Carduus0"><span>Carduus0</span></a>
     </div>
-    <script src="/index.js"></script>
+    <script  async src="/index.js"></script>
 </body>
 </html>
