--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get money</title>
+    <link type="image/png" sizes="16x16" rel="icon" href="./request-money.png">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -30,8 +31,7 @@
                 </button>
             </a>
         </div>
-        <a class="github__link" href="https://github.com/Carduus0"><span>Carduus0</span></a>
     </div>
-    <script  async src="/index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
