feat: add script defer

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <source src="./audio/Leningrad_Menedzher.mp3">
         </audio>
         <div class="container__btn">
-            <a class="link--random" href="#" target="_blank">
+            <a class="link--random" href="https://rs.school" target="_blank">
                 <button class="press">
                     <span class="span1">make money</span><span class="span2">click here</span>
                 </button>
             </a>
         </div>
     </div>
-    <script src="./index.js"></script>
+    <script  defer src="./index.js"></script>
 </body>
 </html>
